# agent-k8s-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: agent.py  main.py  models.py
